compiler/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants
Rule 3     MAIN -> PRINCIPAL r_save_func LPAREN RPAREN r_register_princ r_save_param_func VARS r_save_vars r_end_princ r_func_set BLOQUE r_func_end
Rule 4     VARS -> VAR VAR_AUX
Rule 5     VARS -> empty
Rule 6     VAR_AUX -> TIPO IDS VAR_AUX
Rule 7     VAR_AUX -> empty
Rule 8     TIPO -> INT r_save_type
Rule 9     TIPO -> FLOAT r_save_type
Rule 10    TIPO -> CHAR r_save_type
Rule 11    TIPO -> STRING r_save_type
Rule 12    IDS -> ID r_register_var ARRDIM DOTCOMA
Rule 13    IDS -> ID r_register_var ARRDIM COMA IDS
Rule 14    ARRDIM -> LSTAPLE EXPRESION RSTAPLE
Rule 15    ARRDIM -> LSTAPLE EXPRESION RSTAPLE LSTAPLE EXPRESION RSTAPLE
Rule 16    ARRDIM -> LSTAPLE EXPRESION COMA EXPRESION RSTAPLE
Rule 17    ARRDIM -> empty
Rule 18    FUNCTIONS -> FUNCTION FUNCTIONS
Rule 19    FUNCTIONS -> empty
Rule 20    FUNCTION -> FUNCION TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
Rule 21    FUNCTION -> FUNCION VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
Rule 22    PARAM -> TIPO ID r_register_var PARENTESIS PARAM_AUX
Rule 23    PARAM -> empty
Rule 24    PARAM_AUX -> COMA PARAM
Rule 25    PARAM_AUX -> empty
Rule 26    PARENTESIS -> LSTAPLE RSTAPLE
Rule 27    PARENTESIS -> LSTAPLE RSTAPLE LSTAPLE RSTAPLE
Rule 28    PARENTESIS -> empty
Rule 29    BLOQUE -> LBRACKET ESTATUTOS RBRACKET
Rule 30    ESTATUTOS -> ESTATUTO ESTATUTOS
Rule 31    ESTATUTOS -> empty
Rule 32    ESTATUTO -> ASIGNACION DOTCOMA
Rule 33    ESTATUTO -> FUN DOTCOMA
Rule 34    ESTATUTO -> COND
Rule 35    ESTATUTO -> WRITE DOTCOMA
Rule 36    ESTATUTO -> READ DOTCOMA
Rule 37    ESTATUTO -> RETURN DOTCOMA
Rule 38    ASIGNACION -> ID r_seen_operand_id ARRDIM EQUAL r_seen_operator EXPRESION r_seen_equal
Rule 39    ASIGNACION -> ID r_seen_operand_id ARRDIM EQUAL r_seen_operator CTE_ARR
Rule 40    EXPRESION -> SUBEXP r_seen_subexp EXPRESION_AUX
Rule 41    EXPRESION_AUX -> AND r_seen_operator EXPRESION
Rule 42    EXPRESION_AUX -> OR r_seen_operator EXPRESION
Rule 43    EXPRESION_AUX -> empty
Rule 44    SUBEXP -> EXP r_seen_exp SUBEXP_AUX
Rule 45    SUBEXP_AUX -> COMPARACION SUBEXP
Rule 46    SUBEXP_AUX -> empty
Rule 47    COMPARACION -> MORE r_seen_operator
Rule 48    COMPARACION -> LESS r_seen_operator
Rule 49    COMPARACION -> COMPARE r_seen_operator
Rule 50    COMPARACION -> DIFFERENT r_seen_operator
Rule 51    COMPARACION -> MOREEQUAL r_seen_operator
Rule 52    COMPARACION -> LESSEQUAL r_seen_operator
Rule 53    EXP -> TERMINO r_seen_term EXP_AUX
Rule 54    EXP_AUX -> PLUS r_seen_operator EXP
Rule 55    EXP_AUX -> MINUS r_seen_operator EXP
Rule 56    EXP_AUX -> empty
Rule 57    TERMINO -> FACTOR r_seen_factor TERMINO_AUX
Rule 58    TERMINO_AUX -> MULT r_seen_operator TERMINO
Rule 59    TERMINO_AUX -> DIV r_seen_operator TERMINO r_seen_term
Rule 60    TERMINO_AUX -> MOD r_seen_operator TERMINO r_seen_term
Rule 61    TERMINO_AUX -> empty
Rule 62    FACTOR -> NOT r_seen_unary_operator FACTOR_AUX
Rule 63    FACTOR -> FACTOR_AUX
Rule 64    FACTOR_AUX -> SIGN LPAREN r_seen_operator EXPRESION RPAREN r_pop_fake_bottom
Rule 65    FACTOR_AUX -> SIGN CTE ARROP
Rule 66    SIGN -> PLUS r_seen_unary_operator
Rule 67    SIGN -> MINUS r_seen_unary_operator
Rule 68    SIGN -> empty
Rule 69    CTE -> CTE_I r_seen_operand
Rule 70    CTE -> CTE_F r_seen_operand
Rule 71    CTE -> CTE_CH r_seen_operand
Rule 72    CTE -> CTE_STRING r_seen_operand
Rule 73    CTE -> FUN
Rule 74    CTE -> ID r_seen_operand_id ARRDIM
Rule 75    ARROP -> DET_ARR r_seen_operator_mat
Rule 76    ARROP -> TRANS_ARR r_seen_operator_mat
Rule 77    ARROP -> INV_ARR r_seen_operator_mat
Rule 78    ARROP -> empty
Rule 79    FUN -> ID r_check_func LPAREN FUN_AUX RPAREN r_go_sub
Rule 80    FUN_AUX -> EXPRESION r_check_param COMA FUN_AUX
Rule 81    FUN_AUX -> EXPRESION r_check_param
Rule 82    FUN_AUX -> empty
Rule 83    COND -> IF
Rule 84    COND -> FOR
Rule 85    COND -> WHILE
Rule 86    IF -> SI LPAREN EXPRESION r_check_int RPAREN ENTONCES IF2 r_if_end
Rule 87    IF2 -> BLOQUE IF_AUX
Rule 88    IF2 -> COND
Rule 89    IF_AUX -> SINO r_else_start BLOQUE
Rule 90    IF_AUX -> empty
Rule 91    WHILE -> MIENTRAS r_set_while LPAREN EXPRESION r_check_int RPAREN WHILE_AUX WHILE2 r_while_end
Rule 92    WHILE2 -> BLOQUE
Rule 93    WHILE2 -> COND
Rule 94    WHILE_AUX -> HAZ
Rule 95    WHILE_AUX -> empty
Rule 96    FOR -> DESDE ASIGNACION HASTA EXPRESION r_for_gen HACER FOR2 r_for_end
Rule 97    FOR2 -> BLOQUE
Rule 98    FOR2 -> COND
Rule 99    WRITE -> ESCRIBE LPAREN WRITE_AUX RPAREN
Rule 100   WRITE_AUX -> EXPRESION r_escribe WRITE_AUXSUB
Rule 101   WRITE_AUXSUB -> COMA WRITE_AUX
Rule 102   WRITE_AUXSUB -> empty
Rule 103   READ -> LEE LPAREN READ_AUX RPAREN
Rule 104   READ_AUX -> ID r_seen_operand_id ARRDIM r_lee READ_AUXSUB
Rule 105   READ_AUXSUB -> COMA READ_AUX
Rule 106   READ_AUXSUB -> empty
Rule 107   RETURN -> REGRESA LPAREN EXPRESION RPAREN r_regresa
Rule 108   RETURN -> REGRESA LPAREN NULL RPAREN
Rule 109   CTE_ARR -> LBRACKET CTE_ARR_AUX RBRACKET
Rule 110   CTE_ARR -> LBRACKET CTE_ARR_AUX2 RBRACKET
Rule 111   CTE_ARR_AUX -> CTE
Rule 112   CTE_ARR_AUX -> CTE_ARR_AUXSUB
Rule 113   CTE_ARR_AUXSUB -> COMA CTE_ARR_AUX
Rule 114   CTE_ARR_AUXSUB -> empty
Rule 115   CTE_ARR_AUX2 -> LBRACKET CTE_ARR_AUX RBRACKET CTE_ARR_AUX2SUB
Rule 116   CTE_ARR_AUX2SUB -> COMA CTE_ARR_AUX2
Rule 117   CTE_ARR_AUX2SUB -> empty
Rule 118   r_save_type -> <empty>
Rule 119   r_save_func -> <empty>
Rule 120   r_register_func -> <empty>
Rule 121   r_register_var -> <empty>
Rule 122   r_register_princ -> <empty>
Rule 123   r_end_princ -> <empty>
Rule 124   r_seen_operand -> <empty>
Rule 125   r_seen_operand_id -> <empty>
Rule 126   r_seen_operator -> <empty>
Rule 127   r_seen_unary_operator -> <empty>
Rule 128   r_seen_equal -> <empty>
Rule 129   r_seen_subexp -> <empty>
Rule 130   r_seen_exp -> <empty>
Rule 131   r_seen_term -> <empty>
Rule 132   r_seen_factor -> <empty>
Rule 133   r_seen_operator_mat -> <empty>
Rule 134   r_pop_fake_bottom -> <empty>
Rule 135   r_check_int -> <empty>
Rule 136   r_if_end -> <empty>
Rule 137   r_else_start -> <empty>
Rule 138   r_set_while -> <empty>
Rule 139   r_while_end -> <empty>
Rule 140   r_for_gen -> <empty>
Rule 141   r_for_end -> <empty>
Rule 142   r_save_param_func -> <empty>
Rule 143   r_save_vars -> <empty>
Rule 144   r_func_set -> <empty>
Rule 145   r_func_end -> <empty>
Rule 146   r_check_func -> <empty>
Rule 147   r_check_param -> <empty>
Rule 148   r_go_sub -> <empty>
Rule 149   r_goto_main -> <empty>
Rule 150   r_regresa -> <empty>
Rule 151   r_escribe -> <empty>
Rule 152   r_lee -> <empty>
Rule 153   r_print_constants -> <empty>

Terminals, with rules where they appear

AND                  : 41
CHAR                 : 10
COMA                 : 13 16 24 80 101 105 113 116
COMMENT              : 
COMPARE              : 49
CTE_CH               : 71
CTE_F                : 70
CTE_I                : 69
CTE_STRING           : 72
DESDE                : 96
DET_ARR              : 75
DIFFERENT            : 50
DIV                  : 59
DOTCOMA              : 2 12 32 33 35 36 37
ENTONCES             : 86
EQUAL                : 38 39
ESCRIBE              : 99
FLOAT                : 9
FUNCION              : 20 21
HACER                : 96
HASTA                : 96
HAZ                  : 94
ID                   : 2 12 13 20 21 22 38 39 74 79 104
INT                  : 8
INV_ARR              : 77
LBRACKET             : 29 109 110 115
LEE                  : 103
LESS                 : 48
LESSEQUAL            : 52
LPAREN               : 3 20 21 64 79 86 91 99 103 107 108
LSTAPLE              : 14 15 15 16 26 27 27
MIENTRAS             : 91
MINUS                : 55 67
MOD                  : 60
MORE                 : 47
MOREEQUAL            : 51
MULT                 : 58
NOT                  : 62
NULL                 : 108
OR                   : 42
PLUS                 : 54 66
PRINCIPAL            : 3
PROGRAMA             : 2
RBRACKET             : 29 109 110 115
REGRESA              : 107 108
RPAREN               : 3 20 21 64 79 86 91 99 103 107 108
RSTAPLE              : 14 15 15 16 26 27 27
SI                   : 86
SINO                 : 89
STRING               : 11
TRANS_ARR            : 76
VAR                  : 4
VOID                 : 21
error                : 

Nonterminals, with rules where they appear

ARRDIM               : 12 13 38 39 74 104
ARROP                : 65
ASIGNACION           : 32 96
BLOQUE               : 3 20 21 87 89 92 97
COMPARACION          : 45
COND                 : 34 88 93 98
CTE                  : 65 111
CTE_ARR              : 39
CTE_ARR_AUX          : 109 113 115
CTE_ARR_AUX2         : 110 116
CTE_ARR_AUX2SUB      : 115
CTE_ARR_AUXSUB       : 112
ESTATUTO             : 30
ESTATUTOS            : 29 30
EXP                  : 44 54 55
EXPRESION            : 14 15 15 16 16 38 41 42 64 80 81 86 91 96 100 107
EXPRESION_AUX        : 40
EXP_AUX              : 53
FACTOR               : 57
FACTOR_AUX           : 62 63
FOR                  : 84
FOR2                 : 96
FUN                  : 33 73
FUNCTION             : 18
FUNCTIONS            : 2 18
FUN_AUX              : 79 80
IDS                  : 6 13
IF                   : 83
IF2                  : 86
IF_AUX               : 87
MAIN                 : 2
PARAM                : 20 21 24
PARAM_AUX            : 22
PARENTESIS           : 22
PROGRAM              : 0
READ                 : 36
READ_AUX             : 103 105
READ_AUXSUB          : 104
RETURN               : 37
SIGN                 : 64 65
SUBEXP               : 40 45
SUBEXP_AUX           : 44
TERMINO              : 53 58 59 60
TERMINO_AUX          : 57
TIPO                 : 6 20 22
VARS                 : 2 3 20 21
VAR_AUX              : 4 6
WHILE                : 85
WHILE2               : 91
WHILE_AUX            : 91
WRITE                : 35
WRITE_AUX            : 99 101
WRITE_AUXSUB         : 100
empty                : 5 7 17 19 23 25 28 31 43 46 56 61 68 78 82 90 95 102 106 114 117
r_check_func         : 79
r_check_int          : 86 91
r_check_param        : 80 81
r_else_start         : 89
r_end_princ          : 3
r_escribe            : 100
r_for_end            : 96
r_for_gen            : 96
r_func_end           : 3 20 21
r_func_set           : 3 20 21
r_go_sub             : 79
r_goto_main          : 2
r_if_end             : 86
r_lee                : 104
r_pop_fake_bottom    : 64
r_print_constants    : 2
r_register_func      : 20 21
r_register_princ     : 3
r_register_var       : 12 13 22
r_regresa            : 107
r_save_func          : 3 20 21
r_save_param_func    : 3 20 21
r_save_type          : 8 9 10 11 21
r_save_vars          : 2 3 20 21
r_seen_equal         : 38
r_seen_exp           : 44
r_seen_factor        : 57
r_seen_operand       : 69 70 71 72
r_seen_operand_id    : 38 39 74 104
r_seen_operator      : 38 39 41 42 47 48 49 50 51 52 54 55 58 59 60 64
r_seen_operator_mat  : 75 76 77
r_seen_subexp        : 40
r_seen_term          : 53 59 60
r_seen_unary_operator : 62 66 67
r_set_while          : 91
r_while_end          : 91

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (2) PROGRAM -> . PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants

    PROGRAMA        shift and go to state 2

    PROGRAM                        shift and go to state 1

state 1

    (0) S' -> PROGRAM .



state 2

    (2) PROGRAM -> PROGRAMA . r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants
    (149) r_goto_main -> .

    ID              reduce using rule 149 (r_goto_main -> .)

    r_goto_main                    shift and go to state 3

state 3

    (2) PROGRAM -> PROGRAMA r_goto_main . ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants

    ID              shift and go to state 4


state 4

    (2) PROGRAM -> PROGRAMA r_goto_main ID . DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants

    DOTCOMA         shift and go to state 5


state 5

    (2) PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA . VARS r_save_vars FUNCTIONS MAIN r_print_constants
    (4) VARS -> . VAR VAR_AUX
    (5) VARS -> . empty
    (1) empty -> .

    VAR             shift and go to state 7
    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)

    VARS                           shift and go to state 6
    empty                          shift and go to state 8

state 6

    (2) PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS . r_save_vars FUNCTIONS MAIN r_print_constants
    (143) r_save_vars -> .

    FUNCION         reduce using rule 143 (r_save_vars -> .)
    PRINCIPAL       reduce using rule 143 (r_save_vars -> .)

    r_save_vars                    shift and go to state 9

state 7

    (4) VARS -> VAR . VAR_AUX
    (6) VAR_AUX -> . TIPO IDS VAR_AUX
    (7) VAR_AUX -> . empty
    (8) TIPO -> . INT r_save_type
    (9) TIPO -> . FLOAT r_save_type
    (10) TIPO -> . CHAR r_save_type
    (11) TIPO -> . STRING r_save_type
    (1) empty -> .

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    STRING          shift and go to state 16
    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)

    VAR_AUX                        shift and go to state 10
    TIPO                           shift and go to state 11
    empty                          shift and go to state 12

state 8

    (5) VARS -> empty .

    FUNCION         reduce using rule 5 (VARS -> empty .)
    PRINCIPAL       reduce using rule 5 (VARS -> empty .)
    LBRACKET        reduce using rule 5 (VARS -> empty .)


state 9

    (2) PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars . FUNCTIONS MAIN r_print_constants
    (18) FUNCTIONS -> . FUNCTION FUNCTIONS
    (19) FUNCTIONS -> . empty
    (20) FUNCTION -> . FUNCION TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (21) FUNCTION -> . FUNCION VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (1) empty -> .

    FUNCION         shift and go to state 20
    PRINCIPAL       reduce using rule 1 (empty -> .)

    FUNCTIONS                      shift and go to state 17
    FUNCTION                       shift and go to state 18
    empty                          shift and go to state 19

state 10

    (4) VARS -> VAR VAR_AUX .

    FUNCION         reduce using rule 4 (VARS -> VAR VAR_AUX .)
    PRINCIPAL       reduce using rule 4 (VARS -> VAR VAR_AUX .)
    LBRACKET        reduce using rule 4 (VARS -> VAR VAR_AUX .)


state 11

    (6) VAR_AUX -> TIPO . IDS VAR_AUX
    (12) IDS -> . ID r_register_var ARRDIM DOTCOMA
    (13) IDS -> . ID r_register_var ARRDIM COMA IDS

    ID              shift and go to state 22

    IDS                            shift and go to state 21

state 12

    (7) VAR_AUX -> empty .

    FUNCION         reduce using rule 7 (VAR_AUX -> empty .)
    PRINCIPAL       reduce using rule 7 (VAR_AUX -> empty .)
    LBRACKET        reduce using rule 7 (VAR_AUX -> empty .)


state 13

    (8) TIPO -> INT . r_save_type
    (118) r_save_type -> .

    ID              reduce using rule 118 (r_save_type -> .)

    r_save_type                    shift and go to state 23

state 14

    (9) TIPO -> FLOAT . r_save_type
    (118) r_save_type -> .

    ID              reduce using rule 118 (r_save_type -> .)

    r_save_type                    shift and go to state 24

state 15

    (10) TIPO -> CHAR . r_save_type
    (118) r_save_type -> .

    ID              reduce using rule 118 (r_save_type -> .)

    r_save_type                    shift and go to state 25

state 16

    (11) TIPO -> STRING . r_save_type
    (118) r_save_type -> .

    ID              reduce using rule 118 (r_save_type -> .)

    r_save_type                    shift and go to state 26

state 17

    (2) PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS . MAIN r_print_constants
    (3) MAIN -> . PRINCIPAL r_save_func LPAREN RPAREN r_register_princ r_save_param_func VARS r_save_vars r_end_princ r_func_set BLOQUE r_func_end

    PRINCIPAL       shift and go to state 28

    MAIN                           shift and go to state 27

state 18

    (18) FUNCTIONS -> FUNCTION . FUNCTIONS
    (18) FUNCTIONS -> . FUNCTION FUNCTIONS
    (19) FUNCTIONS -> . empty
    (20) FUNCTION -> . FUNCION TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (21) FUNCTION -> . FUNCION VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (1) empty -> .

    FUNCION         shift and go to state 20
    PRINCIPAL       reduce using rule 1 (empty -> .)

    FUNCTION                       shift and go to state 18
    FUNCTIONS                      shift and go to state 29
    empty                          shift and go to state 19

state 19

    (19) FUNCTIONS -> empty .

    PRINCIPAL       reduce using rule 19 (FUNCTIONS -> empty .)


state 20

    (20) FUNCTION -> FUNCION . TIPO ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (21) FUNCTION -> FUNCION . VOID r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (8) TIPO -> . INT r_save_type
    (9) TIPO -> . FLOAT r_save_type
    (10) TIPO -> . CHAR r_save_type
    (11) TIPO -> . STRING r_save_type

    VOID            shift and go to state 31
    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    STRING          shift and go to state 16

    TIPO                           shift and go to state 30

state 21

    (6) VAR_AUX -> TIPO IDS . VAR_AUX
    (6) VAR_AUX -> . TIPO IDS VAR_AUX
    (7) VAR_AUX -> . empty
    (8) TIPO -> . INT r_save_type
    (9) TIPO -> . FLOAT r_save_type
    (10) TIPO -> . CHAR r_save_type
    (11) TIPO -> . STRING r_save_type
    (1) empty -> .

    INT             shift and go to state 13
    FLOAT           shift and go to state 14
    CHAR            shift and go to state 15
    STRING          shift and go to state 16
    FUNCION         reduce using rule 1 (empty -> .)
    PRINCIPAL       reduce using rule 1 (empty -> .)
    LBRACKET        reduce using rule 1 (empty -> .)

    TIPO                           shift and go to state 11
    VAR_AUX                        shift and go to state 32
    empty                          shift and go to state 12

state 22

    (12) IDS -> ID . r_register_var ARRDIM DOTCOMA
    (13) IDS -> ID . r_register_var ARRDIM COMA IDS
    (121) r_register_var -> .

    LSTAPLE         reduce using rule 121 (r_register_var -> .)
    DOTCOMA         reduce using rule 121 (r_register_var -> .)
    COMA            reduce using rule 121 (r_register_var -> .)

    r_register_var                 shift and go to state 33

state 23

    (8) TIPO -> INT r_save_type .

    ID              reduce using rule 8 (TIPO -> INT r_save_type .)


state 24

    (9) TIPO -> FLOAT r_save_type .

    ID              reduce using rule 9 (TIPO -> FLOAT r_save_type .)


state 25

    (10) TIPO -> CHAR r_save_type .

    ID              reduce using rule 10 (TIPO -> CHAR r_save_type .)


state 26

    (11) TIPO -> STRING r_save_type .

    ID              reduce using rule 11 (TIPO -> STRING r_save_type .)


state 27

    (2) PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN . r_print_constants
    (153) r_print_constants -> .

    $end            reduce using rule 153 (r_print_constants -> .)

    r_print_constants              shift and go to state 34

state 28

    (3) MAIN -> PRINCIPAL . r_save_func LPAREN RPAREN r_register_princ r_save_param_func VARS r_save_vars r_end_princ r_func_set BLOQUE r_func_end
    (119) r_save_func -> .

    LPAREN          reduce using rule 119 (r_save_func -> .)

    r_save_func                    shift and go to state 35

state 29

    (18) FUNCTIONS -> FUNCTION FUNCTIONS .

    PRINCIPAL       reduce using rule 18 (FUNCTIONS -> FUNCTION FUNCTIONS .)


state 30

    (20) FUNCTION -> FUNCION TIPO . ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end

    ID              shift and go to state 36


state 31

    (21) FUNCTION -> FUNCION VOID . r_save_type ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (118) r_save_type -> .

    ID              reduce using rule 118 (r_save_type -> .)

    r_save_type                    shift and go to state 37

state 32

    (6) VAR_AUX -> TIPO IDS VAR_AUX .

    FUNCION         reduce using rule 6 (VAR_AUX -> TIPO IDS VAR_AUX .)
    PRINCIPAL       reduce using rule 6 (VAR_AUX -> TIPO IDS VAR_AUX .)
    LBRACKET        reduce using rule 6 (VAR_AUX -> TIPO IDS VAR_AUX .)


state 33

    (12) IDS -> ID r_register_var . ARRDIM DOTCOMA
    (13) IDS -> ID r_register_var . ARRDIM COMA IDS
    (14) ARRDIM -> . LSTAPLE EXPRESION RSTAPLE
    (15) ARRDIM -> . LSTAPLE EXPRESION RSTAPLE LSTAPLE EXPRESION RSTAPLE
    (16) ARRDIM -> . LSTAPLE EXPRESION COMA EXPRESION RSTAPLE
    (17) ARRDIM -> . empty
    (1) empty -> .

    LSTAPLE         shift and go to state 39
    DOTCOMA         reduce using rule 1 (empty -> .)
    COMA            reduce using rule 1 (empty -> .)

    ARRDIM                         shift and go to state 38
    empty                          shift and go to state 40

state 34

    (2) PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants .

    $end            reduce using rule 2 (PROGRAM -> PROGRAMA r_goto_main ID DOTCOMA VARS r_save_vars FUNCTIONS MAIN r_print_constants .)


state 35

    (3) MAIN -> PRINCIPAL r_save_func . LPAREN RPAREN r_register_princ r_save_param_func VARS r_save_vars r_end_princ r_func_set BLOQUE r_func_end

    LPAREN          shift and go to state 41


state 36

    (20) FUNCTION -> FUNCION TIPO ID . r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (119) r_save_func -> .

    LPAREN          reduce using rule 119 (r_save_func -> .)

    r_save_func                    shift and go to state 42

state 37

    (21) FUNCTION -> FUNCION VOID r_save_type . ID r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end

    ID              shift and go to state 43


state 38

    (12) IDS -> ID r_register_var ARRDIM . DOTCOMA
    (13) IDS -> ID r_register_var ARRDIM . COMA IDS

    DOTCOMA         shift and go to state 44
    COMA            shift and go to state 45


state 39

    (14) ARRDIM -> LSTAPLE . EXPRESION RSTAPLE
    (15) ARRDIM -> LSTAPLE . EXPRESION RSTAPLE LSTAPLE EXPRESION RSTAPLE
    (16) ARRDIM -> LSTAPLE . EXPRESION COMA EXPRESION RSTAPLE
    (40) EXPRESION -> . SUBEXP r_seen_subexp EXPRESION_AUX
    (44) SUBEXP -> . EXP r_seen_exp SUBEXP_AUX
    (53) EXP -> . TERMINO r_seen_term EXP_AUX
    (57) TERMINO -> . FACTOR r_seen_factor TERMINO_AUX
    (62) FACTOR -> . NOT r_seen_unary_operator FACTOR_AUX
    (63) FACTOR -> . FACTOR_AUX
    (64) FACTOR_AUX -> . SIGN LPAREN r_seen_operator EXPRESION RPAREN r_pop_fake_bottom
    (65) FACTOR_AUX -> . SIGN CTE ARROP
    (66) SIGN -> . PLUS r_seen_unary_operator
    (67) SIGN -> . MINUS r_seen_unary_operator
    (68) SIGN -> . empty
    (1) empty -> .

    NOT             shift and go to state 51
    PLUS            shift and go to state 54
    MINUS           shift and go to state 55
    LPAREN          reduce using rule 1 (empty -> .)
    CTE_I           reduce using rule 1 (empty -> .)
    CTE_F           reduce using rule 1 (empty -> .)
    CTE_CH          reduce using rule 1 (empty -> .)
    CTE_STRING      reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)

    EXPRESION                      shift and go to state 46
    SUBEXP                         shift and go to state 47
    EXP                            shift and go to state 48
    TERMINO                        shift and go to state 49
    FACTOR                         shift and go to state 50
    FACTOR_AUX                     shift and go to state 52
    SIGN                           shift and go to state 53
    empty                          shift and go to state 56

state 40

    (17) ARRDIM -> empty .

    DOTCOMA         reduce using rule 17 (ARRDIM -> empty .)
    COMA            reduce using rule 17 (ARRDIM -> empty .)
    DET_ARR         reduce using rule 17 (ARRDIM -> empty .)
    TRANS_ARR       reduce using rule 17 (ARRDIM -> empty .)
    INV_ARR         reduce using rule 17 (ARRDIM -> empty .)
    MULT            reduce using rule 17 (ARRDIM -> empty .)
    DIV             reduce using rule 17 (ARRDIM -> empty .)
    MOD             reduce using rule 17 (ARRDIM -> empty .)
    PLUS            reduce using rule 17 (ARRDIM -> empty .)
    MINUS           reduce using rule 17 (ARRDIM -> empty .)
    MORE            reduce using rule 17 (ARRDIM -> empty .)
    LESS            reduce using rule 17 (ARRDIM -> empty .)
    COMPARE         reduce using rule 17 (ARRDIM -> empty .)
    DIFFERENT       reduce using rule 17 (ARRDIM -> empty .)
    MOREEQUAL       reduce using rule 17 (ARRDIM -> empty .)
    LESSEQUAL       reduce using rule 17 (ARRDIM -> empty .)
    AND             reduce using rule 17 (ARRDIM -> empty .)
    OR              reduce using rule 17 (ARRDIM -> empty .)
    RSTAPLE         reduce using rule 17 (ARRDIM -> empty .)
    RPAREN          reduce using rule 17 (ARRDIM -> empty .)
    HACER           reduce using rule 17 (ARRDIM -> empty .)
    HASTA           reduce using rule 17 (ARRDIM -> empty .)
    RBRACKET        reduce using rule 17 (ARRDIM -> empty .)
    EQUAL           reduce using rule 17 (ARRDIM -> empty .)


state 41

    (3) MAIN -> PRINCIPAL r_save_func LPAREN . RPAREN r_register_princ r_save_param_func VARS r_save_vars r_end_princ r_func_set BLOQUE r_func_end

    RPAREN          shift and go to state 57


state 42

    (20) FUNCTION -> FUNCION TIPO ID r_save_func . r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (120) r_register_func -> .

    LPAREN          reduce using rule 120 (r_register_func -> .)

    r_register_func                shift and go to state 58

state 43

    (21) FUNCTION -> FUNCION VOID r_save_type ID . r_save_func r_register_func LPAREN PARAM RPAREN r_save_param_func VARS r_save_vars r_func_set BLOQUE r_func_end
    (119) r_save_func -> .

    LPAREN          reduce using rule 119 (r_save_func -> .)

    r_save_func                    shift and go to state 59

state 44

    (12) IDS -> ID r_register_var ARRDIM DOTCOMA .

    INT             reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)
    FLOAT           reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)
    CHAR            reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)
    STRING          reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)
    FUNCION         reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)
    PRINCIPAL       reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)
    LBRACKET        reduce using rule 12 (IDS -> ID r_register_var ARRDIM DOTCOMA .)


state 45

    (13) IDS -> ID r_register_var ARRDIM COMA . IDS
    (12) IDS -> . ID r_register_var ARRDIM DOTCOMA
    (13) IDS -> . ID r_register_var ARRDIM COMA IDS

    ID              shift and go to state 22

    IDS                            shift and go to state 60

state 46

    (14) ARRDIM -> LSTAPLE EXPRESION . RSTAPLE
    (15) ARRDIM -> LSTAPLE EXPRESION . RSTAPLE LSTAPLE EXPRESION RSTAPLE
    (16) ARRDIM -> LSTAPLE EXPRESION . COMA EXPRESION RSTAPLE

    RSTAPLE         shift and go to state 61
    COMA            shift and go to state 62


state 47

    (40) EXPRESION -> SUBEXP . r_seen_subexp EXPRESION_AUX
    (129) r_seen_subexp -> .

    AND             reduce using rule 129 (r_seen_subexp -> .)
    OR              reduce using rule 129 (r_seen_subexp -> .)
    RSTAPLE         reduce using rule 129 (r_seen_subexp -> .)
    COMA            reduce using rule 129 (r_seen_subexp -> .)
    RPAREN          reduce using rule 129 (r_seen_subexp -> .)
    HACER           reduce using rule 129 (r_seen_subexp -> .)
    DOTCOMA         reduce using rule 129 (r_seen_subexp -> .)
    HASTA           reduce using rule 129 (r_seen_subexp -> .)

    r_seen_subexp                  shift and go to state 63

state 48

    (44) SUBEXP -> EXP . r_seen_exp SUBEXP_AUX
    (130) r_seen_exp -> .
